# UltimateColorPicker

./: .gitignore  CMakeLists.txt  README.md  application.qrc
Tests/: CMakeLists.txt  IsBetweenMatcher.hpp  TestColorConversion.cpp
include/: AddIcon.hpp  AsyncJsonReader.hpp  Carousel.hpp  ColorCell.hpp  ColorCombo.hpp  ColorConversion.hpp  ColorInfo.hpp  ColorPallete.hpp  ColorPicker.hpp  ColorWheel.hpp  ColoredEllipse.hpp  DeletePopup.hpp  EllipseButton.hpp  GridLayout.hpp  Hsv.hpp  NamedPallete.hpp  NavigationBar.hpp  QColorExtended.hpp  ShadeCircle.hpp  SingletonBase.hpp  SlidingWindow.hpp  Utils.hpp  mainwindow.h  mainwindow.ui
resources/: style.qss
resources/configs/: color_palletes.json
src/: AddIcon.cpp  Carousel.cpp  ColorCell.cpp  ColorCombo.cpp  ColorConversion.cpp  ColorInfo.cpp  ColorPallete.cpp  ColorPicker.cpp  ColorWheel.cpp  ColoredEllipse.cpp  DeletePopup.cpp  EllipseButton.cpp  GridLayout.cpp  NamedPallete.cpp  NavigationBar.cpp  QColorExtended.cpp  ShadeCircle.cpp  SlidingWindow.cpp  Utils.cpp  main.cpp  mainwindow.cpp
